[package]
name = "subquery"
version = "0.8.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
tracing     = "0.1"
thiserror   = "1.0"
include_dir = "0.7"

serde       = { version = "1.0", features = ["derive"] }
serde-aux   = "0.6"
serde-hex   = "0.1"
async-trait = "0.1"
strum       = { version = "0.24", features = ["derive"] }
hex         = "0.4"
array-bytes = { optional = true, version = "6" }

gql_client  = "1"

support-types = { path = "../../frame/supports/support-types" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default          = []
bridge-s2s       = ["array-bytes"]
bridge-parachain = ["bridge-s2s"]
bridge-ethv2     = []

