[package]
name = "bridge-component"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
	"Cargo.toml",
	"**/*.rs",
	"README.md",
	"LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"

reqwest = "0.11"

bridge-standard = { path = "../bridge-standard" }

[dev-dependencies]
env_logger = "0.8"
