[package]
name = "bridge-service"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
	"Cargo.toml",
	"**/*.rs",
	"README.md",
	"LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"

[dependencies]

log = "0.4"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8"
