[package]
name = "bridge-shared"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"


[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }

log = "0.4"

lifeline = "0.6"
postage = "0.4"

bridge-standard = { path = "../bridge-standard" }
bridge-component = { path = "../bridge-component" }

chain-darwinia = { path = "../bridge-chain/chain-darwinia" }
