[package]
name = "bridge-task"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
    "Cargo.toml",
    "**/*.rs",
    "README.md",
    "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"


[dependencies]
anyhow = "1.0"

log = "0.4"
env_logger = "0.8"

lifeline = "0.6"
postage = "0.4"

bridge-standard = { path = "../bridge-standard" }
bridge-config = { path = "../bridge-config" }
bridge-service = { path = "../bridge-service" }
bridge-component = { path = "../bridge-component" }

chain-darwinia = { path = "../chain-darwinia" }
chain-ethereum = { path = "../chain-ethereum" }

