[package]
name = "bridge-component"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
	"Cargo.toml",
	"**/*.rs",
	"README.md",
	"LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
lifeline = "0.6"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

bridge-traits = { path = "../traits" }
bridge-primitives = { path = "../primitives", features = ["runtime", "rpc"] }

web3 = { version = "0.14.0", git = "https://github.com/wuminzhe/rust-web3.git", branch = "v0.14.0", features = ["signing"] }

bee-client = { git = "https://github.com/darwinia-network/substrate-api-client.git", branch = "darwinia" }

microkv = { git = "https://github.com/fewensa/microkv.git", branch = "master" }

[dev-dependencies]
env_logger = "0.8"

async-std = { version = "1", features = ["attributes"] }

sp-core = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.0" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate.git", tag = "darwinia-v0.11.0" }
