[package]
name = "bridge-primitives"
version = "0.3.3"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://docs.rs/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
	"Cargo.toml",
	"**/*.rs",
	"README.md",
	"LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2018"

[dependencies]

uint = "0.8.5"
rlp = "0.4.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11", optional = true }
async-trait = { version = "0.1", optional = true }
codec = { package = "parity-scale-codec", version = "2.1", features = ["derive", "full"] }

frame-support = { git = "https://github.com/darwinia-network/substrate.git", branch = "main", optional = true }
pallet-indices = { git = "https://github.com/darwinia-network/substrate.git", branch = "main", optional = true }
pallet-im-online = { git = "https://github.com/darwinia-network/substrate.git", branch = "main", optional = true }
sp-core = { git = "https://github.com/darwinia-network/substrate.git", branch = "main", optional = true }

[features]
rpc = ["async-trait", "reqwest", "serde_json"]
runtime = [
	"frame-support",
	"pallet-indices",
	"pallet-im-online",
	"sp-core"
]
default = []
