[package]
name = "bridge-template"
version = "0.5.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[[bin]]
name = "bridge-template"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-attributes = "0.1"
color-eyre = "0.5"

tokio = { version = "1", features = ["full"] }

structopt = "0.3"
strum     = { version = "0.21", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }

lifeline = { git = "https://github.com/fewensa/lifeline-rs.git", branch = "threads-safely" }
postage  = "0.4"

support-common = { path = "../../supports/support-common" }
support-lifeline   = { path = "../../supports/support-lifeline" }
support-terminal   = { path = "../../supports/support-terminal" }
support-config     = { path = "../../supports/support-config" }

