[package]
name = "bridge-crab-crabparachain"
version = "0.7.2"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/bridger"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/bridger"
homepage = "https://github.com/darwinia-network/bridger"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["substrate", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
tracing     = "0.1"
color-eyre  = "0.6"
structopt   = "0.3"
async-trait = "0.1"
strum       = { version = "0.24", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
tokio       = { version = "1", features = ["full"] }

bin-s2s         = { path = "../../assistants/bin-s2s", features = ["solo-with-para"] }
subquery        = { path = "../../assistants/subquery" }
support-common  = { path = "../../frame/supports/support-common" }
support-toolkit = { path = "../../frame/supports/support-toolkit" }
support-types   = { path = "../../frame/supports/support-types" }

bridge-s2s-traits    = { path = "../../frame/traits/bridge-s2s" }
feemarket-s2s-traits = { path = "../../frame/traits/feemarket-s2s" }
client-common-traits = { path = "../../frame/traits/client-common" }

client-crab           = { path = "../../assistants/client-crab", features = [ "bridge-s2s-crab-parachain", "feemarket-s2s-crab-parachain" ]}
client-kusama         = { path = "../../assistants/client-kusama", features = [ "bridge-s2s-crab" ] }
client-crab-parachain = { path = "../../assistants/client-crab-parachain", features = [ "bridge-s2s-crab", "feemarket-s2s-crab" ] }
